--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -244,3 +244,21 @@ h2 {
 	background-color: #f4f4f4;
 }
 
+
+.big-icon {
+	font-size: 250%;
+	color: #6920b0;
+	display: block;
+	margin-bottom: 30px;
+}
+
+.service-heading {
+	font-size: 150%;
+	margin-bottom: 30px;
+	font-weight: 400;
+}
+
+.service-para {
+	color: #555;
+}
+
