--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -184,6 +184,7 @@ h2 {
 	color: #555;
 	font-weight: 300;
 	margin-bottom: 30px;
+	line-height: 1.5;
 }
 
 .section-sub-heading:after {
@@ -273,3 +274,14 @@ h2 {
 	padding: 1% 3%;
 }
 
+/* PARTENERS SECTION  */
+
+.partners-section {
+	text-align: center;
+
+}
+
+.partner-image {
+	width: 65%;
+	height: auto;
+}
