--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -356,5 +356,32 @@ cite img {
 	background-color: #fff;
 	width: 90%;
 	margin-bottom: 30px;
+	box-shadow: 0 3px 2px #efefef;
+	text-align: left;
+}
 
+.package-heading {
+	font-size: 150%;
+	color:#555;
+	margin-bottom: 50px;
+	font-weight: 400;
+}
+
+.package-price {
+	color: #ed07b7;
+	font-size: 300%;
+	font-weight: 300;
+	margin-bottom: 10px;
+
+}
+
+.package-price span {
+	font-size: 30%;
+	font-weight: 500;
+}
+
+.package-para {
+	color: #555;
+	font-size: 80%;
+	margin-bottom: 10px;
 }
