--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -410,3 +410,8 @@ cite img {
 	padding: 15px;
 	border-bottom: 1px solid #efefef;
 }
+
+.package-box div:last-child {
+	border: 0;
+	text-align: center;
+}
