--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -492,6 +492,14 @@ footer {
 	color: #888;
 }
 
+.footer-nav {
+	float: left;
+}
+
+.social-links {
+	float: right;
+
+}
 
 .footer-nav li {
 	list-style: none;
@@ -506,6 +514,13 @@ footer {
 .social-links li a:visited {
 	color: #888;
 	text-decoration: none;
+	transition:color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+	color: #fff;
+
 }
 
 .social-links li {
@@ -513,3 +528,9 @@ footer {
 	display: inline-block;
 	margin-left: 30px;
 }
+
+.social-links li a:link,
+.social-links li a:visited {
+	font-size: 160%;
+}
+
