--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
@@ -6,7 +6,8 @@
 	    
     }
     .about-para {
-        margin-bottom: 20px;
+        /* margin-bottom: 20px; */
+        margin-top: 30px;
         
     }
 
