--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
@@ -47,6 +47,24 @@
     .laptop-image {
         padding-right: 5%;
     }
+
+    .package-box {
+        width: 100%;
+    }
+
+    .packages-heading {
+        margin-bottom: 25px;
+    }
+
+    footer {
+        padding: 30px;
+    }
+
+    footer p {
+        margin-top: 20px;
+        line-height: 1.3;
+
+    }
     
 }
 
