--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
@@ -108,6 +108,23 @@
 }
 
 /* smaller to larger mobile phones */
-@media only screen and (max-width:479px) {
-    
+@media only screen and (max-width:480px) {
+    .laptop-image {
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    .about-box:first-child {
+        text-align: center;
+
+    }
+
+    .about-box:last-child {
+        text-align: center;
+    }
+
+    .span_1_of_4 {
+        width: 45%;
+        margin-bottom: 20px;
+    }
 }
