--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
@@ -127,4 +127,15 @@
         width: 45%;
         margin-bottom: 20px;
     }
+
+    .span_1_of_3 {
+        padding: 0 10%;
+        margin-bottom: 5px;
+
+    }
+
+    .contact-form {
+        width: 100%;
+        
+    }
 }
