--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
@@ -142,4 +142,11 @@
     .contact-label {
         padding-left: 0;
     }
+
+    .footer-nav,
+    .social-links {
+        float: none;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
