--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/media-query.css
@@ -149,4 +149,9 @@
         text-align: center;
         margin-bottom: 10px;
     }
+
+    .work-portfolio li{
+        width: 50%;
+    
+    }
 }
