--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -574,6 +574,15 @@ footer p {
 	line-height: 1.5;
 }
 
+.sticky_nav {
+	position: fixed;
+	left: 0;
+	top: 0;
+	background-color: rgba(255, 255, 255,.8);
+	width: 100%;
+	box-shadow: 0 2px 2px #efefef;
+}
+
 
 
 
