--- a/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
+++ b/PRACTICE/My_Digisolve/Digisolve/resources/css/style.css
@@ -141,6 +141,31 @@ input[type=submit] :hover {
 
 }
 
+.sticky_nav {
+	position: fixed;
+	left: 0;
+	top: 0;
+	background-color: rgba(255, 255, 255,.8);
+	width: 100%;
+	box-shadow: 0 2px 2px #efefef;
+}
+
+.sticky_nav .logo {
+	height: 60px;  
+	margin-top: 3px;
+}
+
+.sticky_nav .main_nav {
+	margin-top: 18px;
+
+}
+
+.sticky_nav .main-nav li a:link,
+.sticky_nav .main-nav li a:visited {
+	color: #555;
+	padding: 5px 0;
+}
+
 .laptop-img {
 	width: 80%;
 
@@ -574,14 +599,6 @@ footer p {
 	line-height: 1.5;
 }
 
-.sticky_nav {
-	position: fixed;
-	left: 0;
-	top: 0;
-	background-color: rgba(255, 255, 255,.8);
-	width: 100%;
-	box-shadow: 0 2px 2px #efefef;
-}
 
 
 
